implemented full authentication
Users can now only perform Create, update and delete functions if they are authenticated to do so.
